p5/style.css
html, body {
    font-family: 'Montserrat', sans-serif;
    background-color: #e1e1e1;
    color: black;
    animation: fadeInAnimation ease 0.5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

/* @keyframes fadeInAnimation {
  0% {
      background-color: black;
  }
  100% {
      background-color: #676767;
   }
} */

canvas {
  display: block;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 20px 20px 40px 40px;
}

li {
  float: right;
  font-size: 20px;
  border-bottom: 2px solid #5ec4ff;
  
}

li:first-child {
  margin-left: 15px;
  width: 5rem;
}

li.second-child {
  margin-left: 15px;
  width: 3.9rem;
}

h1 {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 9rem;
}

.projects {
  display: flex;
  padding-top: 15rem;
  flex-direction: column;
  margin-left: 5%;
  margin-right: 5%;
}

.proj1, .proj2 {
  display: flex;
  align-items: flex-end;
  justify-content: end;
  height: 20rem;
  background-color: #ccc;
  font-size: 24pt;
  padding-bottom: 0.5%;
  margin-top: 6rem;
}

.proj1 {
  justify-content: flex-start;
  padding-left: 0.5%;

}

.proj2 {
  justify-content: flex-end;
  padding-right: 0.5%;
}

h2 {
  text-decoration: underline;
  text-decoration-color: #5ec4ff;
}

h3 {
  float: left;
  font-size:x-large;
  margin-top: 15px;
  border-bottom: 2px solid #5ec4ff;
}

.navbar {
  border-style: solid;
  border-color: #B3F2F2;
  border: 15px;
  color: black;
}

a {
  color: inherit;
  text-decoration: none;
}

.projectsA {
  display: grid;
  grid-template-columns: 300px 300px 300px 300px;
  top: 45%;
  left: 53%;
  
}

.projectsB {
  display: grid;
  grid-template-columns: 500px 500px 500px;
  
  position: absolute;
  top: 65%;
  left: 58%;
  transform: translate(-50%, -50%);
}

.description {
  letter-spacing: 0.1rem;
  line-height: 1.75rem;
  font-size: 15pt;
  border: solid 2px #5ec4ff;
  padding: 20px;
  width: 50rem;
  margin:auto;
  text-align: center;
  background-color: #676767;
  color: #5ec4ff;
}

.intro_p {
  height: 25rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
}

p {
  padding-top: 4rem;
  font-size: 12pt;
  animation-name: bounce;
  animation-duration: 5s;
  animation-iteration-count: infinite;  
  animation-delay: 2s;
}

@keyframes bounce {
  0%{top:0px;} 
  50%{top:100px;} 
  100%{top:0px;}
}

p.code {
  width: 700px;
  background-color: cornsilk;
  font-size: 16px;
  flex-wrap: wrap;
  color: black;
}

textarea {
  min-width: 700px;
  min-height: 600px;
}

div.row {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  flex-direction: row;
  align-content: center;
  padding-bottom: 4rem;
}

div.footer {
  text-align: center;
}

